2005-02-13 Vangelis Rokas <vrokas AT otenet.gr>

	* device/include/pic16/string.h: modified prototype for memccpy()
	to memccpy(void *, void *, char, size_t)
	* src/pic16/gen.c (genFunction, genEndFunction): reenable if-case to
	check whether to omit frame pointer or not,
	* (genInline): convert all occurences of "\n" to LF in inline
	assembler blocks, this helps formatting the inline text,
	* (pic16_loadFSR0): modified prototype,
	* (genNearPointerGet, genNearPointerSet): reorganization of code,
	removed some 8051 legacy code,
	* (genPackBits): enabled handling bitfields exceeding one byte in size,
	* src/pic16/ralloc.c (pic16_assignRegisters): clear dynrIdx variable
	before allocating temporary registers in functions,

2005-02-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bitvars.c: corrected the "fix"

2005-02-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bitvars.c,
	* support/regression/tests/bitwise.c,
	* support/regression/tests/rotate.c: "fixed" problems on Alpha

2005-02-10 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (assignToSameBank) : fixed cast to pointer of
	  different size for Alpha
	* src/pic16/gen.c (genCmpEq) : improved compare with 0

2005-02-09 Raphael Neider <rneider AT web.de>

	* src/SDCC.lex(doPragma) : save and restore warning options as well
	  (also added new stack plus clone- and copyAndFreeSDCCERRG())
	* have #pragma less_pedantic set the errorlevel to WARNING
	  (fixes #1117001)
	* (cloneOptimize) : fixed wrong malloc's size
	* support/Util/SDCCerr.[ch] : made SDCCERRG globally accessible to
	  facilitate correct handling of #pragma (save|restore)

2005-02-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c: removed non-standard C nameless struct/union

2005-02-04 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/gen.c : Fix for bugs #1080519 & #1115662.

2004-02-03 Maarten Brock <sourceforge.brock AT dse.nl>
